--- a/eslogin.html
+++ b/eslogin.html
@@ -1,3 +1,57 @@
+<!-- ...existing code... -->
+  </main>
+  <footer class="nav-glass text-white py-1 border-t-2 border-yellow-400 fixed bottom-0 left-0 w-full z-50 text-xs">
+    <div class="max-w-7xl mx-auto px-2">
+      <div class="grid md:grid-cols-4 gap-1 mb-1">
+        <div class="space-y-0.5">
+          <div class="flex items-center gap-1">
+            <svg class="w-6 h-6 drop-shadow-lg" viewbox="0 0 300 320" xmlns="http://www.w3.org/2000/svg"><defs>
+              <lineargradient id="colombiaFlagFooter" x1="0%" y1="0%" x2="0%" y2="100%">
+                <stop offset="0%" style="stop-color:#FCD116;stop-opacity:1" />
+                <stop offset="50%" style="stop-color:#FCD116;stop-opacity:1" />
+                <stop offset="50%" style="stop-color:#003893;stop-opacity:1" />
+                <stop offset="75%" style="stop-color:#003893;stop-opacity:1" />
+                <stop offset="75%" style="stop-color:#CE1126;stop-opacity:1" />
+                <stop offset="100%" style="stop-color:#CE1126;stop-opacity:1" />
+              </lineargradient>
+            </defs> <path d="M 40,85 L 45,80 L 52,75 L 60,72 L 70,70 L 82,68 L 95,67 L 110,67 L 125,68 L 140,69 L 155,71 L 170,74 L 185,78 L 198,83 L 210,89 L 220,96 L 228,104 L 234,113 L 238,123 L 240,133 L 241,145 L 240,158 L 238,172 L 234,186 L 230,200 L 225,214 L 218,228 L 210,241 L 200,253 L 188,263 L 174,271 L 158,277 L 140,281 L 120,283 L 100,283 L 80,280 L 62,275 L 46,268 L 32,259 L 22,248 L 15,236 L 10,223 L 7,210 L 5,197 L 5,184 L 6,171 L 8,158 L 11,145 L 15,132 L 20,120 L 26,108 L 33,97 Z" fill="url(#colombiaFlagFooter)" stroke="#FCD116" stroke-width="2.5" />
+            </svg><span class="font-display text-xs font-black text-yellow-400">Aqui vivo</span>
+          </div>
+          <div class="mt-0.5">
+            <p class="text-blue-200 text-[10px]">© 2026 Aqui vivo. Todos los derechos reservados.</p>
+            <p class="text-blue-200 text-[10px]">Profesora de español y polaco en Let's Talk Poznań. Te ayudo a dejar de tener miedo a hablar 🌸🤍</p>
+          </div>
+        </div>
+        <div>
+          <h4 class="font-bold mb-1 text-yellow-400 text-xs">Servicios</h4>
+          <ul class="space-y-0.5 text-blue-200 text-[10px]">
+            <li><a href="https://aquivivo.github.io/aquivivo/Polaco.html" class="hover:text-yellow-400 transition-colors">Curso de Polaco</a></li>
+            <li><a href="https://aquivivo.github.io/aquivivo/Ayuda.html" class="hover:text-yellow-400 transition-colors">Ayuda con Trámites</a></li>
+            <li><a href="https://aquivivo.github.io/aquivivo/Traducciones.html" class="hover:text-yellow-400 transition-colors">Traducciones</a></li>
+            <li><a href="https://aquivivo.github.io/aquivivo/Clases.html" class="hover:text-yellow-400 transition-colors">Clases Grupales</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="font-bold mb-1 text-yellow-400 text-xs">Recursos</h4>
+          <ul class="space-y-0.5 text-blue-200 text-[10px]">
+            <li><a href="https://aquivivo.github.io/aquivivo/Ebooks.html" class="hover:text-yellow-400 transition-colors">E-books</a></li>
+            <li><a href="#inicio" class="hover:text-yellow-400 transition-colors">Sobre Mí</a></li>
+            <li><a href="https://aquivivo.github.io/aquivivo/Blog.html" class="hover:text-yellow-400 transition-colors">Blog</a></li>
+            <li><a href="https://aquivivo.github.io/aquivivo/FAQ.html" class="hover:text-yellow-400 transition-colors">FAQ</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="font-bold mb-1 text-yellow-400 text-xs">Legal</h4>
+          <ul class="space-y-0.5 text-blue-200 text-[10px]">
+            <li><a href="https://aquivivo.github.io/aquivivo/Privacidad.html" class="hover:text-yellow-400 transition-colors">Política de Privacidad</a></li>
+            <li><a href="https://aquivivo.github.io/aquivivo/Condiciones.html" class="hover:text-yellow-400 transition-colors">Términos y Condiciones</a></li>
+            <li><a href="https://aquivivo.github.io/aquivivo/Cookies.html" class="hover:text-yellow-400 transition-colors">Cookies</a></li>
+            <li><span class="block text-blue-200 text-[10px] mt-0.5">Hecho con <span class="text-red-500">❤️</span> en Poznań, Polonia</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 <!DOCTYPE html>
 <html lang="es">
 <head>
