--- a/course.html
+++ b/course.html
@@ -782,7 +782,7 @@
         vocab.sort((a, b) => a.order - b.order);
 
         grammarList.innerHTML = grammar.length
-          ? grammar.map((item, idx) => renderTopicCard(item, idx)).join('')
+          ? grammar.map(renderTopicCard).join('')
           : `<div class="card noResults">Sin resultados para gramática</div>`;
 
         vocabList.innerHTML = vocab.length
@@ -798,19 +798,21 @@
            </div>`
           : '';
 
-        // Only the first grammar card with matching title is a link
-        if (
-          idx === 0 &&
-          t.title.trim().toLowerCase().includes('alfabeto') &&
-          t.title.trim().toLowerCase().includes('pronunciación')
-        ) {
+        function renderTopicCard(t) {
+          const adminButtons = isAdmin
+            ? `<div class="admin-tools">
+         <button class="btn-edit" onclick="event.stopPropagation(); editTopic('${t.id}')">✏️</button>
+         <button class="btn-del" onclick="event.stopPropagation(); deleteTopic('${t.id}')">❌</button>
+       </div>`
+            : '';
+
           return `
-          <a href="A1/A1G01.html" class="card topic" style="display:block;text-decoration:none;cursor:pointer;">
-            ${adminButtons}
-            <strong>${escapeHtml(t.title)}</strong>
-            <p>${escapeHtml(t.desc)}</p>
-          </a>
-        `;
+    <div class="card topic" onclick="openLesson('${t.id}')">
+      ${adminButtons}
+      <strong>${escapeHtml(t.title)}</strong>
+      <p>${escapeHtml(t.desc)}</p>
+    </div>
+  `;
         }
         return `
         <div class="card topic" onclick="openLesson('${t.id}')">
